<resources>
    <string name="app_name">BNCCFinalProject</string>
    <string name="hotline_title">Hotline</string>
    <string name="hotline_desc">Layanan darurat via telepon yang disediakan oleh Kemkes dan juga Pemprov DKI Jakarta</string>
    <string name="positive">Positive</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="get_to_know_more">Get to know more</string>
    <string name="look_up_title">Look Up</string>
    <string name="look_up_desc">See details by province all over Indonesia</string>
    <string name="hotline_home_desc">Check emergency number to contact</string>
    <string name="siaga_corona">Siaga Corona</string>
    <string name="version_number">Version 1.0.0</string>
    <string name="info_dialog_desc">Developed by Team 2.BNCC\nPowered by\n\n\nCopyright (c) 2020</string>
    <string name="go_academy">GO Academy</string>
    <string name="indonesia">Indonesia</string>
    <string name="back_to_overview">Back to overview</string>
    <string name="lookup_query_hint">Lampung</string>
    <string name="lookup_search_hint">eg: Lampung</string>
    <string name="information">Information</string>
    <string name="coronavirus">coronavirus</string>
    <string name="total_cases">Total Cases</string>
    <string name="goto_lookup">Goto Lookup</string>
    <string name="goto_hotline">Goto Hotline</string>
    <string name="close_dialog">Close dialog</string>
</resources>