<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lookup.LookUpActivity">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_indonesia"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/rubik"
            android:text="@string/indonesia"
            android:textColor="@color/indigo2"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_arrow"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/back_to_overview" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:background="#808080"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:background="@drawable/search_box_60dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_search"
            app:srcCompat="@drawable/ic_baseline_search_24"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_search"
            app:queryHint="@string/lookup_query_hint"
            app:iconifiedByDefault="false"
            app:searchIcon="@null"
            app:closeIcon="@null"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/lookup_search_hint"
            app:queryBackground="@android:color/transparent"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@id/iv_search"
            app:layout_constraintEnd_toStartOf="@id/iv_clear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_clear"
            app:srcCompat="@drawable/ic_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbLookUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        tools:visibility="gone"
        android:indeterminateTint="@color/indigo2"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlLookUpData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cl_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:visibility="visible"
        android:paddingBottom="170dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLookUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_look_up"
            tools:itemCount="3"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>