<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_rounded_top_left_right_25dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:paddingTop="15dp"
    android:id="@+id/bottom_sheet">

    <View
        android:id="@+id/grapple"
        android:layout_width="35dp"
        android:layout_height="3dp"
        android:background="@drawable/grapple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_positive"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grapple"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:background="@drawable/blue_rounded_10dp"
        android:gravity="center"
        android:elevation="5dp"
        android:layout_marginStart="20dp">

        <ProgressBar
            android:id="@+id/pb_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/white"
            tools:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:textColor="@color/white"
            tools:text="10000"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_positive_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive"
            style="@style/b1"
            android:textColor="@color/white"
            android:layout_below="@id/tv_positive"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_positive"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_positive"
            app:constraint_referenced_ids="tv_positive_desc,tv_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_recovered"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toEndOf="@id/rl_positive"
        app:layout_constraintTop_toBottomOf="@id/grapple"
        app:layout_constraintEnd_toStartOf="@id/rl_deaths"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_rounded_10dp"
        android:gravity="center"
        android:elevation="5dp">

        <ProgressBar
            android:id="@+id/pb_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/white"
            tools:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:textColor="@color/white"
            tools:text="10000"
            android:layout_centerHorizontal="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_rec_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            style="@style/b1"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_recovered"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recovered"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_recovered"
            app:constraint_referenced_ids="tv_rec_desc,tv_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_deaths"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grapple"
        android:layout_marginTop="15dp"
        android:background="@drawable/red_rounded_10dp"
        android:elevation="5dp"
        android:layout_marginEnd="20dp">

        <ProgressBar
            android:id="@+id/pb_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            tools:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:textColor="@color/white"
            tools:text="10000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_deaths_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death"
            style="@style/b1"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deaths"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_deaths"
            app:constraint_referenced_ids="tv_deaths,tv_deaths_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_know_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_to_know_more"
        style="@style/h4"
        android:textColor="@color/indigo2"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_positive"/>

    <RelativeLayout
        android:id="@+id/rl_look_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_know_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/btn_menu_access"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_look_up"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_location_pin"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_look_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look_up_title"
            style="@style/h5"
            android:textColor="@color/indigo2"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_look_up"/>

        <TextView
            android:id="@+id/tv_look_up_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look_up_desc"
            style="@style/b2"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@id/tv_look_up_title"
            android:layout_toEndOf="@id/iv_look_up"
            android:layout_toStartOf="@id/iv_look_up_chevron"/>

        <ImageView
            android:id="@+id/iv_look_up_chevron"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_chevron"
            app:tint="@color/indigo2"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_hotline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/rl_look_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/btn_menu_access"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_hotline"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_siren"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_hotline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotline_title"
            style="@style/h5"
            android:textColor="@color/indigo2"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_hotline"/>

        <TextView
            android:id="@+id/tv_hotline_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotline_home_desc"
            style="@style/b2"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@id/tv_hotline_title"
            android:layout_toEndOf="@id/iv_hotline"
            android:layout_toStartOf="@id/iv_hotline_chevron"/>

        <ImageView
            android:id="@+id/iv_hotline_chevron"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_chevron"
            app:tint="@color/indigo2"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>